--- a/kubernetes/auth.yaml
+++ b/kubernetes/auth.yaml
@@ -14,7 +14,7 @@ spec:
       containers:
       - name: auth
         imagePullPolicy: IfNotPresent
-        image: auth:latest
+        image: docker.io/mgrzy/authlabo:latest
         ports:
           - containerPort: 3000
             name: http-web-svc
