--- a/kubernetes/chat.yaml
+++ b/kubernetes/chat.yaml
@@ -14,7 +14,7 @@ spec:
       containers:
       - name: chat
         imagePullPolicy: IfNotPresent
-        image: chat:latest
+        image: docker.io/mgrzy/chatlabo:latest
         ports:
           - containerPort: 3000
             name: http-web-svc
